--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,12 +1,13 @@
 .header {
   width: 100%;
   display: flex;
+  gap: 10%;
   align-items: center;
   padding: 25px 20px;
 }
 
 .logo {
-  width: 45px;
+  width: 70px;
 }
 
 .info {
@@ -24,8 +25,8 @@
 }
 
 .avatar {
-  width: 36px;
-  height: 36px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background: var(--dark);
   background-repeat: no-repeat;
