--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -46,6 +46,7 @@
   position: absolute;
   bottom: -15%;
   right: 10%;
+  max-height: 300px;
   max-width: unset;
 }
 
@@ -77,7 +78,7 @@
   height: 170px;
   left: -25px;
   bottom: 74px;
-  background: url(../images/shoe.png) no-repeat center/contain;
+  background: url(https://png.klev.club/uploads/posts/2024-04/png-klev-club-wpph-p-tsirkul-png-8.png) no-repeat center/contain;
 }
 
 .left:after {
@@ -85,7 +86,7 @@
   height: 151px;
   right: -25px;
   bottom: -25px;
-  background: url(../images/devices.png) no-repeat center/contain;
+  background: url(https://pngimg.com/uploads/stapler/stapler_PNG78.png) no-repeat center/contain;
 }
 
 .content {
@@ -98,7 +99,7 @@
 
 .content span {
   line-height: 183px;
-  font-size: 150px;
+  font-size: 130px;
   display: block;
 }
 
@@ -111,16 +112,34 @@
   position: relative;
 }
 
+.right img {
+  height: 100%;
+  width: auto;
+  object-fit: cover;
+  display: block;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .discount {
   font-weight: 500;
-  font-size: 20px;
+  font-size: 32px;
   line-height: 24px;
   text-align: center;
   color: var(--bg);
   position: absolute;
   left: 50%;
+  top: 50%;
   transform: translateX(-50%);
   bottom: 24px;
+  color: white;
 }
 
 .discount span {
